<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_blue"
                android:padding="@dimen/padding_left_right"
                android:paddingTop="25dp">

                <RelativeLayout
                    android:id="@+id/relHeaderTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true">

                    <com.makeramen.roundedimageview.RoundedImageView
                        app:riv_corner_radius="55dp"
                        app:riv_mutate_background="true"
                        android:id="@+id/imgHeader"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/sd_header" />

                    <ImageView
                        android:id="@+id/imgMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/sd_more" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relHeaderTop"
                    android:layout_marginTop="40dp"
                    android:src="@mipmap/sd_loction" />

                <TextView
                    android:id="@+id/txtLoction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imgLocation"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgLocation"
                    android:text="中国杭州|185.186.241.3"
                    android:textColor="@color/wite"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relTop"
                android:layout_marginTop="15dp"
                android:padding="@dimen/padding_left_right">

                <TextView
                    android:id="@+id/txtSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_speed_capture" />



                <com.eagle.view.trendview.BrokenLineTrendView android:layout_below="@+id/txtSpeed" android:layout_width="match_parent" android:layout_height="200dp" android:id="@+id/trendView"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trendView"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_upload_speed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:text="@string/main_download_speed" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relCenter"
                android:padding="@dimen/padding_left_right">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_con_status" />

                <LinearLayout
                    android:id="@+id/linStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </RelativeLayout>
        </RelativeLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>